--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "axios": "^1.13.5",
     "chart.js": "^4.5.1",
+    "nprogress": "^0.2.0",
     "react": "^19.2.4",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.4",
+    "react-quill-new": "^3.8.3",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
